
 History

 __.__.2024: v5.85
 - address region 11xxxx-3FFFFF is now only mapped as needed.
 - optional kernel-debugger-aware variant calls int 68h for deinitialization.
 - better log displays via macro @dprintf.
 - log displays redirected to kernel debugger if one has been detected.
 - buffered output of log displays removed.

 12.02.2024: v5.84

 - fixed: Simulate_IO() no longer calls trap handler.
 - QPIEMU: new JLM that partly implements Qemm's API (QPI).
 - fixed: int 67h, ax=5B01h will return error code A3h if checksum invalid.
 - JemmDbg: removed from binary package.

 06.12.2022: v5.83
 - AHCICD: new JLM for CD/DVD devices attached to a SATA controller running
   in AHCI mode (cooked mode only).
 - XDMA32, XCDROM32: now accepting "AHCI-disabled" SATA controllers.
 - JemmEx: warning displayed if I15 memory blocks had to be ignored due
   to insufficient XMS "static" handles (8); static handles increased to 10.
 - JemmDbg: a PL0 debugger, based on Debug/X; may be used to debug JLMs.
 - Makefile supports creating variants of Jemm386/JemmEx that are kernel
   debugger aware.
 - CPUSTAT: optionally displays IOPB (trapped ports).

 09.08.2022: v5.82
 - JemmEx: minor adjustment to always keep monitor stack dword-aligned.
 - fixed: MOVEXBDA option didn't check that XBDA was adjacent to conv. mem.
 - JLoad: fixed: hook int 2Fh (used to get JLM API entry) was incorrect.
 - CPUID: fixed: feature information incorrect.
 - CPUSTAT: fixed: options -g and -i if physical != linear address.
 - XDMA32: fixed: did reject many disks if /M option wasn't set.

 12.04.2022: v5.81
 - JemmEx: XMS extension v3.51 (super-extended block moves) implemented.

 18.06.2021: v5.80
 - for exceptions other than page faults, the monitor will display register
   CR4 instead of CR2, if it exists.
 - Jemm might have reduced last MCB by 16 byte when loaded while UMBs
   where already available and used by DOS.
 - Jemm does again scan the region C000-EFFF for RAM. This avoids